<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imegensitio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/miradorjardin"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/nombremirador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imegensitio"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/miradorjardin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginHorizontal="75dp"
        />
    <TextView
        android:id="@+id/infositio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nombremirador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/infositio"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginHorizontal="75dp"
        />
    <TextView
        android:id="@+id/preciositio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/infositio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/preciositio"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginHorizontal="75dp"

        />












        />

</androidx.constraintlayout.widget.ConstraintLayout>