<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/restaurentemolde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/titulorestaurantemolde"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"


        />

    <ImageView
        android:id="@+id/imagenrestaurante"
        android:layout_width="318dp"
        android:layout_height="389dp"
        android:src="@drawable/macanas"
        app:layout_constraintTop_toBottomOf="@id/restaurentemolde"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"

        />

    <TextView
        android:id="@+id/nombreplato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imagenrestaurante"
        android:text="@string/nombreplato"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.70"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginHorizontal="15dp"/>



        />

    <TextView
        android:id="@+id/precioplato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/precioplato"
        android:text="@string/precioplato"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginHorizontal="15dp"/>
        />



</androidx.constraintlayout.widget.ConstraintLayout>